<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/analysisToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="36dp"
        app:singleSelection="true"
        app:selectionRequired="true">
        <Button
            android:id="@+id/btn_classification"
            android:text="@string/image_classification"
            style="@style/MaterialButtonToggleGroupStyle"
            />
        <Button
            android:id="@+id/btn_detection"
            android:text="@string/object_detection"
            style="@style/MaterialButtonToggleGroupStyle"
            />
        <Button
            android:id="@+id/btn_sign_language"
            android:text="@string/sign_language"
            style="@style/MaterialButtonToggleGroupStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</RelativeLayout>