<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_classification_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >

    <!--  DRAG INDICATOR of bottom sheet  -->
    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:src="@drawable/ic_spacer"
        tools:ignore="ContentDescription" />

    <!--  HEADING of bottom sheet  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/suggestions"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <!--  SMOOTHED CLASSIFICATION RESULTS  -->
    <FrameLayout
        android:id="@+id/smoothed_results_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  horizontal separator  -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="16dp"/>

    <!--  PER FRAME RESULTS CONTAINER  -->
    <!--  SUB-HEADING of bottom sheet  -->
    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/per_frame_classification_results"
        android:textSize="16sp"
        android:textColor="@color/black" />
    <FrameLayout
        android:id="@+id/perframe_results_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  horizontal separator  -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginVertical="16dp"
        android:background="@android:color/darker_gray" />

    <!--  MODEL SELECTOR  -->
    <TextView
        android:id="@+id/model_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/model"
        android:textSize="16sp"
        android:textColor="@color/black" />
    <FrameLayout
        android:id="@+id/modelselector_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  horizontal separator  -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginVertical="16dp"
        android:background="@android:color/darker_gray" />

    <!--  SETTINGS HEADING  -->
    <TextView
        android:id="@+id/settings_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/other_settings"
        android:textSize="16sp"
        android:paddingBottom="4dp"
        android:textColor="@color/black" />

    <!--  THREAD NUMBER  -->
    <FrameLayout
        android:id="@+id/thread_number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  PROCESSING UNIT  -->
    <FrameLayout
        android:id="@+id/processing_unit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  CAMERA SETTINGS  -->
    <FrameLayout
        android:id="@+id/camera_settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/delay_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  horizontal separator  -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginVertical="16dp"
        android:background="@android:color/darker_gray" />

    <!--  OPEN CAMERA ROLL CLASSIFIER  -->
    <Button
        android:id="@+id/btn_camera_roll_activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open_camera_roll_classifier" />

</LinearLayout>