<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PermissionDenied">



<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/icon"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/heading"-->
<!--        app:srcCompat="@drawable/icon_shaddow" />-->


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hi_there"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/welcometext1"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcometext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/welcometext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lineHeight="24sp"
        android:textSize="16sp"
        android:text="@string/this_app_feeds" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcometext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lineHeight="24sp"
        android:textSize="16sp"
        android:text="@string/this_will_only" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/exit"
            android:letterSpacing="0.0"
            android:paddingLeft="0dp"
            android:background="@android:color/transparent"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:text="@string/settings"
            android:paddingRight="0dp"
            android:letterSpacing="0.0"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>